--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=app-constitucionais-humanos
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=root
+# CONFIGURAÇÃO DE CONEXÃO POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
 spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# CONFIGURAÇÃO JPA/HIBERNATE
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-server.port=8080
